# Geometry-Splitter-Maya-Plugin

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindMaya.cmake
img/.mayaSwatches/: brick_fracture.png_hcm.swatch  brick_texture.jpg_hcm.swatch  wood_texture.jpg_hcm.swatch
src/: HelloWorldCmd.cpp  HelloWorldCmd.h  SplitFromImageCmd.cpp  SplitFromImageCmd.h
